unpackaged/main/default/objects/Instance_Settings__c/Instance_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Instance Settings</label>
</CustomObject>