unpackaged/main/default/objects/Instance_Settings__c/fields/Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Base_URL__c</fullName>
    <label>NF Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>