unpackaged/main/default/objects/Instance_Settings__c/fields/QB_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>QB_Base_URL__c</fullName>
    <description>Introduced as part of the QB migration into NF to be used for QB branded automation</description>
    <label>QB Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>