unpackaged/main/default/objects/Instance_Settings__c/fields/UW_Salesforce_URL__c.field-meta.xml
<CustomField>
    <fullName>UW_Salesforce_URL__c</fullName>
    <description>Underwriting Salesforce URL</description>
    <label>UW Salesforce URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>